chore: set name var in bulid gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,18 @@
 apply plugin: 'com.android.application'
+def pname = "mwol"
 
 android {
-    namespace = "com.mwol"
+    namespace = "com.${pname}"
     compileSdkVersion 35
 
     defaultConfig {
-        applicationId "com.mwol"
+        applicationId "com.${pname}"
         minSdkVersion 34
         targetSdkVersion 35
         versionCode 1
         versionName "1.0"
+
+        resValue "string", "app_name", pname
     }
 
     sourceSets {
