--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
   <application
       android:label="@string/app_name"
-      android:theme="@style/Theme.mwol">
+      android:theme="@style/Theme">
     <activity
         android:name=".MainActivity"
         android:exported="true">
